--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: MLSA OAU
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   MLSA OAU is a vibrant community of developers sharing knowledge and growing together at Obafemi Awolowo University.
-baseurl: "/index.md" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://mlsa-oau.github.io" # the base hostname & protocol for your site
 twitter_username: mlsaoau
 github_username:  mlsaoau
