--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,11 @@ url: "https://mlsa-oau.github.io" # the base hostname & protocol for your site
 twitter_username: mlsaoau
 github_username:  mlsaoau
 
+# Header
+header_pages:
+  - pages/about.md
+  - pages/events.md
+
 # Build settings
 markdown: kramdown
 theme: minima
