--- a/data/events.yaml
+++ b/data/events.yaml
@@ -3,7 +3,11 @@ upcoming:
     date: "2024-05-15"
     location: "Virtual"
     description: "Join us for our annual code sprint. Improve your coding skills and collaborate on community projects."
-
+ongoing:
+  - name: "Code Sprint 2024"
+    date: "2024-05-15"
+    location: "Virtual"
+    description: "Join us for our annual code sprint. Improve your coding skills and collaborate on community projects."
 past:
   - name: "Annual Hackathon"
     date: "2023-11-20"
