--- a/data/events.yaml
+++ b/data/events.yaml
@@ -2,8 +2,8 @@ upcoming:
     name: "Leveraging AI as a StudentPreneur"
     date: "2024-07-22"
     location: "Opolo Hub"
-    register: https://forms.office.com/r/cywEw5Ukmq
     description: "Join us for an exciting and transformative experience at the Leveraging AI as a Studentpreneur conference, where student entrepreneurs like you and industry leaders converge to explore the frontiers of entrepreneurship through the lens of artificial intelligence."
+    register: "https://forms.office.com/r/cywEw5Ukmq"
 ongoing:
     name: "Code Sprint 2024"
     date: "2024-05-15"
